# doc_auto_handling

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.agents/skills/testing-doc-pipeline/: SKILL.md
analysis/: eda_extraction.py  eda_report.md  requirements-eda.txt
app/: config.py  database.py  main.py  models.py
app/services/: application_parser.py  calculation.py  calendar_ru.py  cbr.py  export.py  matching.py  voucher.py
app/web/static/: style.css
app/web/templates/: application_form.html  applications_list.html  base.html  index.html  match.html  voucher_form.html  vouchers_list.html  works_list.html
tests/: test_application_parser.py  test_calculation.py
